<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forgot_Password">

    <RelativeLayout
        android:id="@+id/log_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/get_started"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_bac"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:gravity="top"
            android:lineSpacingExtra="1sp"
            android:text="@string/forgotpassword"
            android:textAppearance="@style/create_acco"
            android:textStyle="bold"
            android:translationY="-0.66sp" />

        <TextView
            android:id="@+id/enter_your_"
            android:layout_width="316dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="102dp"
            android:gravity="top"
            android:lineSpacingExtra="0sp"
            android:text="@string/enter_your_e"
            android:textAppearance="@style/enter_your_"
            android:translationY="-0.11sp" />

        <TextView
            android:id="@+id/email_addre"
            android:layout_width="107dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="156dp"
            android:gravity="top"
            android:lineSpacingExtra="0sp"
            android:text="@string/email_addre"
            android:textAppearance="@style/email_addre"
            android:translationY="-0.11sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="52dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="186dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/auto_layout"
            android:hint="Email"
            android:paddingHorizontal="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="300dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button"
            android:text="LOGIN"
            android:textColor="@color/black" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>