<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/curve"
    tools:context=".Fragment.EnterAddressFragment">

    <RelativeLayout
        android:id="@+id/rectangle_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/curve"
        android:padding="14dp">

        <TextView
            android:id="@+id/enter_address_text"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:lineSpacingExtra="1sp"
            android:text="@string/enter_addre"
            android:textAlignment="textStart"
            android:textAppearance="@style/enter_addre"
            android:textStyle="bold"
            android:translationY="-0.38sp" />

        <RelativeLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/pick_up"
                android:layout_width="43dp"
                android:layout_height="16dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:lineSpacingExtra="0sp"
                android:text="@string/pick_up"
                android:textAppearance="@style/pick_up" />

            <EditText xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/frame_15"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="24dp"
                android:background="@drawable/frame_15"
                android:hint="Pick-Up"
                android:paddingHorizontal="10dp" />

            <TextView
                android:id="@+id/drop_off"
                android:layout_width="50dp"
                android:layout_height="16dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="79dp"
                android:gravity="top"
                android:lineSpacingExtra="0sp"
                android:text="@string/drop_off"
                android:textAppearance="@style/drop_off" />

            <EditText xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/frame_14"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="100dp"
                android:background="@drawable/frame_15"
                android:hint="Drop-Off"
                android:paddingHorizontal="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="155dp"
                android:background="@drawable/button"
                android:text="CONTINUE"
                android:textColor="@color/black" />
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>