<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUs">

    <androidx.cardview.widget.CardView
        android:id="@+id/rectangle_2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-24dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/vector"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />

            <TextView
                android:id="@+id/conatct_us"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:lineSpacingExtra="1sp"
                android:text="@string/conatct_us"
                android:textAlignment="center"
                android:textAppearance="@style/conatct_us"
                android:textStyle="bold"
                android:translationY="-0.38sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/office_addr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:layout_marginLeft="20dp"
        android:text="@string/office_addr"
        android:textAppearance="@style/office_addr"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:translationY="-0.11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_2" />

    <RelativeLayout
        android:id="@+id/frame_78"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/frame_78"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/office_addr">

        <TextView
            android:id="@+id/elgin_st_ce"
            android:layout_width="281dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="top"
            android:layout_marginLeft="20dp"
            android:lineHeight="35sp"
            android:lineSpacingExtra="0sp"
            android:text="@string/elgin_st_ce"
            android:textAppearance="@style/elgin_st_ce"
            android:translationY="-0.11sp" />
    </RelativeLayout>

    <View
        android:id="@+id/line_21"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/line_21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_78" />

    <TextView
        android:id="@+id/reach_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:layout_marginLeft="20dp"
        android:text="@string/reach_us"
        android:textAppearance="@style/reach_us"
        android:textStyle="bold"
        android:translationY="-0.11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_21" />

    <RelativeLayout
        android:id="@+id/frame_80"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/line_21"
        tools:layout_editor_absoluteX="16dp">

        <ImageView
            android:id="@+id/vector1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_baseline_local_phone_24" />

        <TextView
            android:id="@+id/some_id"
            android:layout_width="111dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="1dp"
            android:gravity="top"
            android:lineSpacingExtra="0sp"
            android:text="@string/some_id"
            android:textAppearance="@style/some_id"
            android:translationY="-0.11sp" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/frame_81"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/frame_80"
        tools:layout_editor_absoluteX="16dp">

        <ImageView
            android:id="@+id/vector2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_baseline_email_24" />

        <TextView
            android:id="@+id/some_id1"
            android:layout_width="111dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="1dp"
            android:gravity="top"
            android:lineSpacingExtra="0sp"
            android:text="@string/some_id"
            android:textAppearance="@style/some_id"
            android:translationY="-0.11sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/frame_83"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/frame_81"
        tools:layout_editor_absoluteX="16dp">

        <ImageView
            android:id="@+id/vector3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ig" />

        <TextView
            android:id="@+id/some_id2"
            android:layout_width="111dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="1dp"
            android:gravity="top"
            android:lineSpacingExtra="0sp"
            android:text="@string/some_id"
            android:textAppearance="@style/some_id"
            android:translationY="-0.11sp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>