<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/rectangle_2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-24dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/vector"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                />

            <TextView
                android:id="@+id/conatct_us"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="-2dp"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:lineSpacingExtra="1sp"
                android:text="Edit Profile"
                android:textAlignment="center"
                android:textAppearance="@style/conatct_us"
                android:textStyle="bold"
                android:translationY="-0.38sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/group_145"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#00000000"
        android:src="@mipmap/ic_launcher_round"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_2" />
    <!-- Full Name -->
    <TextView
        android:id="@+id/full_name"
        android:layout_width="76dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:layout_marginLeft="24dp"
        android:lineSpacingExtra="0sp"
        android:layout_marginTop="48dp"
        android:text="@string/full_name"
        android:textAppearance="@style/full_name"
        android:translationY="-0.11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_145" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/auto_layout"
        android:hint="Full Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/full_name" />

    <TextView
        android:id="@+id/email_addre"
        android:layout_width="107dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:layout_marginTop="16dp"
        android:text="@string/email_addre"
        android:textAppearance="@style/email_addre"
        android:translationY="-0.11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fname" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/auto_layout"
        android:hint="Email Address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_addre" />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="116dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:layout_marginTop="16dp"
        android:text="@string/phone_numbe"
        android:textAppearance="@style/phone_numbe"
        android:translationY="-0.11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/phone_numbe"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/auto_layout"
        android:hint="Phone Number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="335dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button"
        android:text="UPDATE PROFILE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_numbe" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>